[project]
name = "mujina"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "u-hyszk", email = "hayashizaki.yu.t5@dc.tohoku.ac.jp" }
]
dependencies = [
    "requests>=2.32.3",
    "pypdf>=4.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mujina"]

[tool.rye.scripts]
test = { cmd = "mkdir -p ok", description = "Run the tests" }
bulid = { cmd = "mkdir -p bulid ; cp -r src/mujina/* build/ ; cp -r .venv/lib/python3.10/site-packages/* build/", description = "Build the mujina.zip" }
build_packages = { cmd = "cd .venv/lib/python3.10/site-packages && zip -r ../../../../mujina.zip .", description = "Build the mujina.zip" }
build_src = { cmd = "cd src/mujina && zip -r mujina.zip lambda_function.py", description = "Build the mujina.zip" }
